# preTTY

./: .gitignore  Cargo.toml  Dioxus.toml  IDEAS.md  README.md  TODO.md  rustfmt.toml
.cargo/: config.toml
actions/src/: keybindings.rs
ansi-docs/Misc/: line.md
ansi-docs/OSC/: hyperlink.md
ansi-docs/SGR/: 24-bit-colour.md  4-bit-colour.md  8-bit-colour.md  colour.md  sgr.md
config/: Cargo.toml
config/src/: actions.rs  colour_pal.rs  keybindings.rs  lib.rs  loader.rs  plugins.rs
config_watcher/: Cargo.toml
config_watcher/src/: lib.rs
css/: catpuccin.css  gruvbox.css  palette.css  style.css
escape/: Cargo.toml
escape/src/: csi.rs  esc.rs  hyperlink.rs  lib.rs  osc.rs  parser.rs  sgr.rs
form/: Cargo.toml
form/src/: deserializer.rs  lib.rs  serializer.rs
gui/: Cargo.toml  loading.html
gui/.cargo/: config.toml
gui/src/: input.rs  main.rs  menu.rs  plugins.rs  split.rs  tabs.rs  terminal.rs
gui/src/menu/: colour.rs  confirm.rs  form.rs  keybinding.rs  palette.rs  plugins.rs
gui/src/terminal/: cell.rs  commands.rs  cursor.rs  debug.rs
hooks/: Cargo.toml
hooks/src/: lib.rs  nextrender.rs  size.rs  sizelisten.rs
js/: textsize.js  textsizeloader.js  waitfor.js
macros/: Cargo.toml
macros/src/: lib.rs
plugins/: plugins.toml
plugins/crt/: plugin.toml  script.js  style.css
plugins/glassy/: glassy.toml  plugin.toml  style.css
scripts/: README.md
src/: app.rs  input.rs  main.rs  palette.css  palette.rs  pty.rs  render.rs  style.css  terminal.rs  utils.rs
src/hooks/: mod.rs  sizelisten.rs
src/input/: mod.rs  mouse.rs
src/renderer/: .terminal.rs.rustfmt  cell.rs  cursor.rs  element-size.rs  header.rs  mod.rs  palette.rs  terminal.rs  write_block.rs
src/renderer/terminal/: cell.rs  commands.rs  cursor.rs
src/terminal/: cell.rs  command.rs  cursor.rs  line.rs  mod.rs  pty.rs  screen.rs  state.rs
src/terminal/screen/: command.rs
term/: Cargo.toml
term/src/: cell.rs  command.rs  cursor.rs  lib.rs  line.rs  pty.rs  screen.rs  state.rs  window.rs
term/src/pty/: custom.rs  desktop.rs
test-programs/kitty-key/: Cargo.toml
test-programs/kitty-key/src/: main.rs
