[workspace]
members = ["gui", "term", "hooks", "config"]
exclude = ["test-programs/kitty-key"]
resolver = "2"

[workspace.dependencies]
config = { path = "./config" }
pretty_hooks = { path = "./hooks" }
pretty_term = { path = "./term" }
prettyterm_gui = { path = "./gui" }
dioxus = { version = "0.5.6", features = ["desktop", "html", "hooks"] }
dioxus-form = "0.1.1"
serde = "1.0.208"
anyhow = "1.0.79"
fern = "0.6.2"
log = "0.4.21"
async-channel = "2.2.0"
async-option = "0.1.1"
termwiz = "0.22.0"
