[workspace]
members = ["gui", "term", "hooks", "config"]
exclude = ["test-programs/kitty-key"]
resolver = "2"

[workspace.dependencies]
config = { path = "./config" }
pretty_hooks = { path = "./hooks" }
pretty_term = { path = "./term" }
prettyterm_gui = { path = "./gui" }
dioxus = { version = "0.6", features = ["desktop", "html", "hooks", "web"] }
dioxus-document = "0.6"
dioxus-form = "0.1.3"
serde = "1.0"
anyhow = "1.0.79"
fern = "0.7"
log = "0.4.22"
async-channel = "2.2.0"
async-option = "0.1.1"
tokio = "1.42"
termwiz = "0.22.0"
futures = "0.3.31"
