[workspace]
members = ["gui", "term", "hooks", "config", "escape"]
exclude = ["test-programs/kitty-key"]
resolver = "2"

[workspace.dependencies]
config = { path = "./config" }
pretty_hooks = { path = "./hooks" }
pretty_term = { path = "./term" }
escape = { path = "./escape" }
prettyterm_gui = { path = "./gui" }
dioxus = { version = "0.6", features = ["html", "hooks"] }
dioxus-document = "0.6"
dioxus-form = "0.1.3"
serde = "1.0"
anyhow = "1.0.79"
fern = "0.7"
log = "0.4.22"
async-channel = "2.2.0"
async-option = "0.1.1"
tokio = { version = "1.42", features = ["time", "rt", "sync", "io-util"]}
futures = "0.3.31"
keyboard-types = { version = "0.7", features = ["serde"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
