[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
dioxus = { workspace = true }
log = { workspace = true }
anyhow ={ workspace = true }
dirs = "5.0.1"
toml = { version = "0.8.19", features = ["preserve_order"] }
enum_derive = "0.1.7"
strum_macros = "0.26.4"
strum = "0.26.3"
confy = "0.6.1"
reqwest = "0.12.7"
markdown = "0.3.0"
gix = "0.66.0"