[package]
name = "prettyterm_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-wasm-bindgen = "0.6.4"
serde_json = "1.0.114"
notify-rust = "4.10.0"
manganis = "0.2.1"
num-traits = "0.2.18"
strum = "0.26.3"
markdown = "0.3.0"

futures = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
fern = { workspace = true }
termwiz = { workspace = true }
log = { workspace = true }
pretty_term = { workspace = true }
pretty_hooks = { workspace = true }
anyhow = { workspace = true }
dioxus = { workspace = true }
async-channel = { workspace = true }
dioxus-form = { workspace = true }
