[package]
name = "prettyterm_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-wasm-bindgen = "0.6.4"
serde_json = "1.0.114"
manganis = "0.6"
num-traits = "0.2.18"
strum = "0.26.3"
markdown = "0.3.0"

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
config = { workspace = true }
fern = { workspace = true }
log = { workspace = true }
pretty_term = { workspace = true }
pretty_hooks = { workspace = true }
anyhow = { workspace = true }
dioxus = { workspace = true }
dioxus-document = { workspace = true }
async-channel = { workspace = true }
dioxus-form = { workspace = true }
escape = { workspace = true }
wasm-logger = "0.2.0"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
notify-rust = "4.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

#dioxus-native = { git="https://github.com/DioxusLabs/blitz.git" }
